[Refactor] Trade entity,service 코드 개선